added put route to deposit coins

--- a/public/home.html
+++ b/public/home.html
@@ -16,6 +16,8 @@
       <div id="Sprite" class="sprite-button">Sprite</div>
       <div id="Dr. Pepper" class="dr-pepper-button">Dr. Pepper</div>
     </div>
+    <div class="coin-slot">Deposit Coin</div>
+    <div class="vend-item-button">Vend item</div>
     <script type="text/javascript" src="./js/scripts.js"></script>
   </body>
 </html>
