refactored GET /inventory, GET .inventory/:id, and PUT /.  Added route to sum coins deposited.  Improved UI

--- a/public/home.html
+++ b/public/home.html
@@ -8,16 +8,10 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="inventory-button">Get all inventory</div>
-    <div>
-      <div>Check inventory</div>
-      <div id="Coke" class="coke-button">Coke</div>
-      <div id="Pepsi" class="pepsi-button">Pepsi</div>
-      <div id="Sprite" class="sprite-button">Sprite</div>
-      <div id="Dr. Pepper" class="dr-pepper-button">Dr. Pepper</div>
-    </div>
+    <div class="vending-machine-container"></div>
+    <div class="inventory-display"></div>
+    <div class="coin-display"></div>
     <div class="coin-slot">Deposit Coin</div>
-    <div class="vend-item-button">Vend item</div>
     <script type="text/javascript" src="./js/scripts.js"></script>
   </body>
 </html>
