delete route added, some refactoring in vendItem route, changed db schema to include coin_type in deposit table

--- a/public/home.html
+++ b/public/home.html
@@ -12,6 +12,7 @@
     <div class="inventory-display"></div>
     <div class="coin-display"></div>
     <div class="coin-slot">Deposit Coin</div>
-    <script type="text/javascript" src="./js/scripts.js"></script>
+    <div class="coin-return">Coin Return</div>
+    <script type="module" src="./js/scripts.js"></script>
   </body>
 </html>
