added background image and styling to ui

--- a/public/home.html
+++ b/public/home.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="vending-machine-container"></div>
-    <div class="inventory-display"></div>
-    <div class="coin-display"></div>
-    <div class="coin-slot">Deposit Coin</div>
-    <div class="coin-return">Coin Return</div>
+    <h2 class="sub-title">Try the...</h2>
+    <h1 class="title">Vend-O-Matic</h1>
+    <div class="vending-machine-container">
+      <img src="./images/vendingMachine.png" />
+      <div class="items"></div>
+      <div class="inventory-display"></div>
+      <div class="coin-display"></div>
+      <div class="coin-slot">Deposit Coin</div>
+      <div class="coin-return">Coin Return</div>
+    </div>
     <script type="module" src="./js/scripts.js"></script>
   </body>
 </html>
