vending machine styling finalized

--- a/public/home.html
+++ b/public/home.html
@@ -13,10 +13,12 @@
     <div class="vending-machine-container">
       <img src="./images/vendingMachine.png" />
       <div class="items"></div>
-      <div class="inventory-display"></div>
+      <div class="inventory-display">Messages...</div>
       <div class="coin-display"></div>
-      <div class="coin-slot">Deposit Coin</div>
-      <div class="coin-return">Coin Return</div>
+      <h3 class="deposit-coins-notification">Deposit coins</h2>
+      <div class="coin-slot"></div>
+      <h3 class="return-coins-notification">Return coins</h2>
+      <div class="coin-return"></div>
     </div>
     <script type="module" src="./js/scripts.js"></script>
   </body>
